--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -1,5 +1,9 @@
-.submit_button:hover {
+.submit_button:not(:disabled):hover {
     border: 1px solid white;
+}
+
+.submit_button:disabled {
+    cursor: auto;
 }
 
 .clear_button:hover {
@@ -18,7 +22,7 @@ h1 {
 button {
     border-radius: 8px;
     border: 1px solid transparent;
-    padding: 0.6em 1.2em;
+    padding: 1em 1.2em;
     font-size: 1em;
     font-weight: 500;
     font-family: inherit;
@@ -33,8 +37,10 @@ button:focus-visible {
 }
 
 .input-field {
-    min-width: 250px;
-    padding: 0.5em;
+    min-width: 500px;
+    height: 2em;
+    font-size: 1.2em;
+    padding: 1em;
     margin: 0.5em;
     margin-bottom: 1.5em;
     color: palevioletred;
