--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -39,6 +39,7 @@ button:focus-visible {
 .input-field {
     min-width: 500px;
     height: 2em;
+    border-radius: 0.7em;
     font-size: 1.4em;
     padding: 0.6em;
     margin: 0.5em;
@@ -46,7 +47,7 @@ button:focus-visible {
     color: palevioletred;
     background: papayawhip;
     border: none;
-    border-radius: 3px;
+    /* border-radius: 3px; */
     width: 80%;
 }
 
