--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 #root {
-    max-width: 1280px;
+    max-width: 100vw;
+    width: 100%;
     margin: 0 auto;
-    padding: 2rem;
+    padding: 1rem;
     text-align: center;
 }
 
@@ -17,4 +18,12 @@
 
 .read-the-docs {
     color: #888;
+}
+
+.page-container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
 }
