--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,26 @@
 #root {
-    max-width: 100vw;
-    width: 100%;
-    margin: 0 auto;
-    padding: 1rem;
-    text-align: center;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-    a:nth-of-type(2) .logo {
-        animation: logo-spin infinite 20s linear;
-    }
+  max-width: 100vw;
+  width: 100%;
+  margin: 0 auto;
+  padding: 1rem;
+  height: auto;
+  min-height: 100vh;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.8);
 }
 
 .card {
-    padding: 2em;
+  padding: 2em;
 }
 
 .read-the-docs {
-    color: #888;
+  color: #888;
 }
 
 .page-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: auto;
 }
